--- a/static/css/style.css
+++ b/static/css/style.css
@@ -422,6 +422,9 @@ section {
           transform: rotate(15deg);
 }
 
+.ajustar-texto{
+  font-size: 2rem;
+}
 .cat-food {
   -ms-flex-wrap: wrap-reverse;
       flex-wrap: wrap-reverse;
